5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1590_2894.log
== TEST (2019-03-20 15:00:52) 
-- CODE:
var1 = 10
????? = float(input("10"))

# Calculo do valor a ser pago, incluindo o frete:
total = 80 + 45

# Impressao do valor total:
print(125)
-- ERROR:
File "XXXX", line 2
    ????? = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:01:08) 
-- CODE:
var1 = 10
float(input("10"))

# Calculo do valor a ser pago, incluindo o frete:
total = 80 + 45

# Impressao do valor total:
print(125)
-- OUTPUT:
125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:01:11) 
-- CODE:
var1 = 10
float(input("10"))

# Calculo do valor a ser pago, incluindo o frete:
total = 80 + 45

# Impressao do valor total:
print(125)
-- EXECUTION TIME:
0.1555
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
125
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
125
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
125
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:01:57) 
-- CODE:
var1 = 800
float(input("10"))

# Calculo do valor a ser pago, incluindo o frete:
total = 800 + 45

# Impressao do valor total:
print(845.0)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:02:14) 
-- CODE:
var1 = 800
float(input(845))

# Calculo do valor a ser pago, incluindo o frete:
total = 800 + 45

# Impressao do valor total:
print(845.0)
-- OUTPUT:
845845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:02:17) 
-- CODE:
var1 = 800
float(input(845))

# Calculo do valor a ser pago, incluindo o frete:
total = 800 + 45

# Impressao do valor total:
print(845.0)
-- EXECUTION TIME:
0.212769
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:02:23) 
-- CODE:
var1 = 800
float(input(845.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800 + 45

# Impressao do valor total:
print(845.0)
-- OUTPUT:
845.0845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:02:27) 
-- CODE:
var1 = 800
float(input(845.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800 + 45

# Impressao do valor total:
print(845.0)
-- EXECUTION TIME:
0.128188
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:03:38) 
-- CODE:
var1 = 800
var(float(input(845.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800 + 45

# Impressao do valor total:
print(845.0)
-- ERROR:
File "XXXX", line 5
    total = 800 + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:04:37) 
-- CODE:
var1 = 800
var(float(input(845.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print(845.0)
-- ERROR:
File "XXXX", line 5
    total = 845.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:38) 
-- CODE:
frete = 45.0
jogos = 8.0
var1 = 845.0
var = (float(input("Digite um numero: "))
print("Digite um numero: ", var1)

-- ERROR:
File "XXXX", line 5
    print("Digite um numero: ", var1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:24:53) 
-- CODE:
var = float(input(
total = var * 8 + 45 
print(total)


-- ERROR:
File "XXXX", line 3
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:03) 
-- CODE:
var = float(input(
total = var * 8 + 45 
print("total")


-- ERROR:
File "XXXX", line 3
    print("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:04) 
-- CODE:
var = float(input("100"))

total = var * 8 + 45 
print(total)


-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:26:07) 
-- CODE:
var = float(input("100"))

total = var * 8 + 45 
print(total)


-- EXECUTION TIME:
0.143857
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
